<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <Button
        android:id="@+id/btnEnterNames"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/EnterNames"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_button_size" />

    <Button
        android:id="@+id/btnStore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Store"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_button_size" />

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Load"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_button_size" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/View"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_button_size" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/Exit"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_button_size" />


</LinearLayout>