<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <View
            android:layout_width="match_parent"
            android:layout_height="8sp" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3sp"
            android:text="@string/labelName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/labelNameHint"
            android:inputType="textPersonName" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/textAge"
            android:paddingStart="3sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelAge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/labelAgeHint"
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/textMovie"
            android:paddingStart="3sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelMovie"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45sp"
                android:layout_weight="50"
                android:text="@string/textDone" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45sp"
                android:layout_weight="50"
                android:text="@string/textAdd" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>